--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,7 +11,7 @@
     
 
 
-    <script>
+   <script>
 
 
 const logoutUser = async ()=>{
@@ -24,6 +24,8 @@ const logoutUser = async ()=>{
   })
 
   const data = await response.json()
+
+location.href="/login"
 
 }
 
